# python_initiation

./: .env.exemple  .gitignore  LICENCE  README.md  install.ps1  pyproject.toml  run.py
app/: __init__.py
app/utils/: email_utils.py  excel_util.py  google_utils.py  openai_utils.py  sharepoint_utils.py
